2005-03-14  Alan Modra  <amodra@bigpond.net.au>

	* po/tr.po: Commit new Turkish translation.

2005-03-05  Alan Modra  <amodra@bigpond.net.au>

	* po/gprof.pot: Regenerate.

2005-02-22  Alan Modra  <amodra@bigpond.net.au>

	* basic_blocks.c: Warning fixes.
	* gmon_io.c: Likewise.
	* hist.c: Likewise.
	* hist.h: Likewise.

2005-01-31  Andrew Cagney  <cagney@gnu.org>

	* configure: Regenerate to track ../gettext.m4.

2005-01-31  Nick Clifton  <nickc@redhat.com>

	* po/vi/po: New file: Vietnamese translation.
	* configure.in: (ALL_LINGUAS): Add vi.
	* configure: Regenerate.

2005-01-27  Andrew Cagney  <cagney@gnu.org>

	* configure: Regenerate to track ../gettext.m4 change.

2005-01-21  Ben Elliston  <bje@au.ibm.com>

	* gmon.h, alpha.c, vax.c: Remove #if 0'd chunks.

2004-11-30  Tero Niemela  <tero_niemela@yahoo.com>

	* Makefile.am: Change LOCALEDIR to $(datadir)/share.
	* Makefile.in: Regenerate.

2004-09-17  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* po/gprof.pot: Regenerate.

2004-07-13  Ben Elliston  <bje@au.ibm.com>

	* gprof.c (main): For line-by-line profiling, there is no need to
	specially exclude the default function set from the flat profile.

2004-06-28  Maciej W. Rozycki  <macro@linux-mips.org>

	* Makefile.in: Regenerate to clean up breakage.

2004-06-15  Ben Elliston  <bje@au.ibm.com>

	* configure.in: Run through autoupdate.
	* configure: Regenerate with autoconf 2.59.
	* Makefile.am (install-local): Rename from this ..
	(install-data-local): .. to this.
	* Makefile.in: Regenerate with automake 1.8.5.
	* aclocal.m4: Regenerate with aclocal 1.8.5.

2004-06-15  Alan Modra  <amodra@bigpond.net.au>

	* corefile.c (core_init): Use bfd_get_section_size
	instead of bfd_get_section_size_before_reloc or _raw_size.
	* symtab.c (symtab_finalize): Likewise.

2004-05-26  Andrew Cagney  <cagney@gnu.org>

	* corefile.c (core_create_line_syms): Per ISO C '90, move