@@ -1,13 +1,13 @@
 /* gmon_io.c - Input and output from/to gmon.out files.
 
-   Copyright 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2007, 2008
+   Copyright 1999, 2000, 2001, 2002, 2003, 2004, 2005
    Free Software Foundation, Inc.
 
    This file is part of GNU Binutils.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 3 of the License, or
+   the Free Software Foundation; either version 2 of the License, or
    (at your option) any later version.
 
    This program is distributed in the hope that it will be useful,
@@ -17,11 +17,10 @@
 
    You should have received a copy of the GNU General Public License
    along with this program; if not, write to the Free Software
-   Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA
-   02110-1301, USA.  */
+   Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
+   02111-1307, USA.  */
 
 #include "gprof.h"
-#include "binary-io.h"
 #include "search_list.h"
 #include "source.h"
 #include "symtab.h"
@@ -301,7 +300,9 @@ gmon_out_read (const char *filename)
   if (strcmp (filename, "-") == 0)
     {
       ifp = stdin;
+#ifdef SET_BINARY
       SET_BINARY (fileno (stdin));
+#endif
     }
   else
     {
@@ -387,10 +388,10 @@ gmon_out_read (const char *filename)
       int samp_bytes, header_size = 0;
       unsigned long count;
       bfd_vma from_pc, self_pc;
+      static struct hdr h;
       UNIT raw_bin_count;
       struct hdr tmp;
       unsigned int version;
-      unsigned int hist_num_bins;
 
       /* Information from a gmon.out file is in two parts: an array of
 	 sampling hits within pc ranges, and the arcs.  */
@@ -429,7 +430,7 @@ gmon_out_read (const char *filename)
           if (gmon_io_read_32 (ifp, &profrate))
 	    goto bad_gmon_file;
 
-	  if (!histograms)
+	  if (!s_highpc)
 	    hz = profrate;
 	  else if (hz != (int) profrate)
 	    {
@@ -479,40 +480,35 @@ gmon_out_read (const char *filename)
 	  done (1);
 	}
 
-      samp_bytes = tmp.ncnt - header_size;
-      hist_num_bins = samp_bytes / sizeof (UNIT);
-      if (histograms && (tmp.low_pc != histograms->lowpc
-			 || tmp.high_pc != histograms->highpc
-			 || (hist_num_bins != histograms->num_bins)))
+      if (s_highpc && (tmp.low_pc != h.low_pc
+		       || tmp.high_pc != h.high_pc || tmp.ncnt != h.ncnt))
 	{
 	  fprintf (stderr, _("%s: incompatible with first gmon file\n"),
 		   filename);
 	  done (1);
 	}
 
-      if (!histograms)
-	{
-	  num_histograms = 1;
-	  histograms = (struct histogram *) xmalloc (sizeof (struct histogram));
-	  histograms->lowpc = tmp.low_pc;
-	  histograms->highpc = tmp.high_pc;
-	  histograms->num_bins = hist_num_bins;
-	  hist_scale = (double)((tmp.high_pc - tmp.low_pc) / sizeof (UNIT))
-	    / hist_num_bins;
-	  histograms->sample = (int *) xmalloc (hist_num_bins * sizeof (int));
-	  memset (histograms->sample, 0, 
-		  hist_num_bins * sizeof (int));
-	}
+      h = tmp;
+      s_lowpc = (bfd_vma) h.low_pc;
+      s_highpc = (bfd_vma) h.high_pc;
+      lowpc = (bfd_vma) h.low_pc / sizeof (UNIT);
+      highpc = (bfd_vma) h.high_pc / sizeof (UNIT);
+      samp_bytes = h.ncnt - header_size;
+      hist_num_bins = samp_bytes / sizeof (UNIT);
 
       DBG (SAMPLEDEBUG,
 	   printf ("[gmon_out_read] lowpc 0x%lx highpc 0x%lx ncnt %d\n",
-		   (unsigned long) tmp.low_pc, (unsigned long) tmp.high_pc,
-		   tmp.ncnt);
+		   (unsigned long) h.low_pc, (unsigned long) h.high_pc,
+		   h.ncnt);
+	   printf ("[gmon_out_read]   s_lowpc 0x%lx   s_highpc 0x%lx\n",
+		   (unsigned long) s_lowpc, (unsigned long) s_highpc);
+	   printf ("[gmon_out_read]     lowpc 0x%lx     highpc 0x%lx\n",
+		   (unsigned long) lowpc, (unsigned long) highpc);
 	   printf ("[gmon_out_read] samp_bytes %d hist_num_bins %d\n",
 		   samp_bytes, hist_num_bins));
 
       /* Make sure that we have sensible values.  */
-      if (samp_bytes < 0 || histograms->lowpc > histograms->highpc)
+      if (samp_bytes < 0 || lowpc > highpc)
 	{
 	  fprintf (stderr,
 	    _("%s: file '%s' does not appear to be in gmon.out format\n"),
@@ -522,6 +518,14 @@ gmon_out_read (const char *filename)
 
       if (hist_num_bins)
 	++nhist;
+
+      if (!hist_sample)
+	{
+	  hist_sample =
+	    (int *) xmalloc (hist_num_bins * sizeof (hist_sample[0]));
+
+	  memset (hist_sample, 0, hist_num_bins * sizeof (hist_sample[0]));
+	}
 
       for (i = 0; i < hist_num_bins; ++i)
 	{
@@ -533,8 +537,7 @@ gmon_out_read (const char *filename)
 	      done (1);
 	    }
 
-	  histograms->sample[i] 
-	    += bfd_get_16 (core_bfd, (bfd_byte *) raw_bin_count);
+	  hist_sample[i] += bfd_get_16 (core_bfd, (bfd_byte *) raw_bin_count);
 	}
 
       /* The rest of the file consists of a bunch of
@@ -550,6 +553,8 @@ gmon_out_read (const char *filename)
 	  /* Add this arc.  */
 	  cg_tally (from_pc, self_pc, count);
 	}
+
+      fclose (ifp);
 
       if (hz == HZ_WRONG)
 	{
@@ -570,9 +575,6 @@ gmon_out_read (const char *filename)
 	       whoami, file_format);
       done (1);
     }
-
-  if (ifp != stdin)
-    fclose (ifp);
 
   if (output_style & STYLE_GMON_INFO)
     {
@@ -682,10 +684,9 @@ gmon_out_write (const char *filename)
 
       /* Write the parts of the headers that are common to both the
 	 old BSD and 4.4BSD formats.  */
-      if (gmon_io_write_vma (ofp, histograms->lowpc)
-          || gmon_io_write_vma (ofp, histograms->highpc)
-          || gmon_io_write_32 (ofp, histograms->num_bins 
-			       * sizeof (UNIT) + hdrsize))
+      if (gmon_io_write_vma (ofp, s_lowpc)
+          || gmon_io_write_vma (ofp, s_highpc)
+          || gmon_io_write_32 (ofp, hist_num_bins * sizeof (UNIT) + hdrsize))
 	{
 	  perror (filename);
 	  done (1);
@@ -713,9 +714,9 @@ gmon_out_write (const char *filename)
 	}
 
       /* Dump the samples.  */
-      for (i = 0; i < histograms->num_bins; ++i)
+      for (i = 0; i < hist_num_bins; ++i)
 	{
-	  bfd_put_16 (core_bfd, (bfd_vma) histograms->sample[i],
+	  bfd_put_16 (core_bfd, (bfd_vma) hist_sample[i],
 		      (bfd_byte *) &raw_bin_count[0]);
 	  if (fwrite (&raw_bin_count[0], sizeof (raw_bin_count), 1, ofp) != 1)
 	    {
