@@ -1,5 +1,9 @@
 2005-03-14  Alan Modra  <amodra@bigpond.net.au>
 
+	* gmon_io.c (gmon_write_raw_arc): Return 1 for invalid size.
+
+2005-03-14  Alan Modra  <amodra@bigpond.net.au>
+
 	* po/tr.po: Commit new Turkish translation.
 
 2005-03-05  Alan Modra  <amodra@bigpond.net.au>
